spark-memsql bundled separately with 2.10 dependencies